--- a/Chillin/Pages/Index.cshtml
+++ b/Chillin/Pages/Index.cshtml
@@ -3,7 +3,38 @@
 @{
 }
 
-<body>
-    <h1>Hello</h1>
-    <h2>hello</h2>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>JustAChillinWebsite</title> @*title*@
+
+    <link rel="stylesheet" href="css/site.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Martian+Mono:wght@100;200;300;400;500;600;700;800&family=Victor+Mono:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
+    </head>
+    <body>
+        <header class="header">
+
+            <a href="/Index" class="logo">Chillin'</a>
+
+            <nav class="navbar"> @*navigation bar*@
+                <a href="/Index">Home</a>
+                <a href="/#">Craving</a>
+                <a href="/#">Music</a>
+                <a href="/#">Game</a>
+                <a href="/#">About Us</a>
+            </nav>
+
+        </header>
+
+        <section class="home">
+            <div class="home-content">
+                <h1>Hi i am fucking gay!</h1>
+            </div>
+        </section>
+    </body>
+</html>
