--- a/Chillin/Pages/Index.cshtml
+++ b/Chillin/Pages/Index.cshtml
@@ -33,7 +33,7 @@
 
         <section class="home">
             <div class="home-content">
-                <h1>Hi i am fucking gay!</h1>
+                <h1>Chill out and enjoy the little things.</h1>
             </div>
         </section>
     </body>
