--- a/Chillin/wwwroot/css/site.css
+++ b/Chillin/wwwroot/css/site.css
@@ -11,7 +11,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 96%;
+    width:97.5%;
     padding: 20px;
     display: flex;
     justify-content: space-between;
@@ -57,18 +57,14 @@
 }
 
 .home {
-    width: 100%;
-    height: 100vh;
+    width: 97.5%;
+    height: 95.5vh;
     display: flex;
     align-items: center;
     padding: 20px;
 }
 
-.home-content {
-    max-width: 630px;
-}
-
-.home content h1{
+.home-content h1{
     position: relative;
     font-size: 45px;
     line-height: 1.2;
