--- a/Chillin/wwwroot/css/site.css
+++ b/Chillin/wwwroot/css/site.css
@@ -76,3 +76,55 @@
     color: white;
     display: flex;
 }
+
+.navbar-toggle {
+    font-size: 24px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    color: white; /* Choose your preferred color */
+    transition: color 0.3s ease;
+}
+
+    .navbar-toggle:hover {
+        color: white; /* Change color on hover if desired */
+    }
+
+@media screen and (max-width: 750px) {
+    .navbar {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        position: absolute;
+        top: 70px; /* Adjust the top position as needed */
+        left: 30%;
+        background-color: #273746; /* Same as body background-color */
+        width: 100%;
+        z-index: 99; /* Ensure it's above other elements */
+        display: none; /* Initially hide the dropdown menu */
+        color: white;
+    }
+
+        .navbar a {
+            margin: 10px 0; 
+            letter-spacing: 2px;
+        }
+
+            .navbar a::before {
+                content: none; /* Remove the underline effect */
+            }
+
+        .navbar.active {
+            display: flex; /* Show the dropdown menu when active class is added */
+        }
+
+    /* Add this style to hide the button on smaller screens */
+    .navbar-toggle {
+        display: none;
+    }
+
+    /* Add this style to show the button only on smaller screens */
+    .navbar.active .navbar-toggle {
+        display: block;
+    }
+}
