--- a/Chillin/wwwroot/css/site.css
+++ b/Chillin/wwwroot/css/site.css
@@ -82,12 +82,12 @@
     background-color: transparent;
     border: none;
     cursor: pointer;
-    color: white; /* Choose your preferred color */
+    color: white;
     transition: color 0.3s ease;
 }
 
     .navbar-toggle:hover {
-        color: white; /* Change color on hover if desired */
+        color: white;
     }
 
 @media screen and (max-width: 750px) {
@@ -96,34 +96,48 @@
         flex-direction: column;
         align-items: center;
         position: absolute;
-        top: 70px; /* Adjust the top position as needed */
+        top: 70px;
         left: 30%;
-        background-color: #273746; /* Same as body background-color */
+        background-color: #273746;
         width: 100%;
-        z-index: 99; /* Ensure it's above other elements */
-        display: none; /* Initially hide the dropdown menu */
+        z-index: 99;
+        display: none;
         color: white;
     }
 
         .navbar a {
-            margin: 10px 0; 
+            margin: 10px 0;
             letter-spacing: 2px;
+            position: relative;
+            font-size: 18px;
+            color: #F4FDFF;
+            font-weight: 200;
+            text-decoration: none;
         }
 
             .navbar a::before {
-                content: none; /* Remove the underline effect */
+                content: '';
+                position: absolute;
+                top: 100%;
+                left: 0;
+                width: 0;
+                height: 2px;
+                background: #F4FDFF;
+                transition: .5s;
+            }
+
+            .navbar a:hover::before {
+                width: 100%;
             }
 
         .navbar.active {
-            display: flex; /* Show the dropdown menu when active class is added */
+            display: flex;
         }
 
-    /* Add this style to hide the button on smaller screens */
     .navbar-toggle {
         display: none;
     }
 
-    /* Add this style to show the button only on smaller screens */
     .navbar.active .navbar-toggle {
         display: block;
     }
