--- a/Chillin/Pages/Index.cshtml
+++ b/Chillin/Pages/Index.cshtml
@@ -19,21 +19,22 @@
     <body>
         <header class="header">
 
-            <a href="/Index" class="logo">Chillin'</a>
+        <a href="/Index" class="logo">&lt;Chillin'&gt;</a>
 
             <nav class="navbar"> @*navigation bar*@
-                <a href="/Index">Home</a>
-                <a href="/#">Craving</a>
-                <a href="/#">Music</a>
-                <a href="/#">Game</a>
-                <a href="/#">About Us</a>
+                <a href="/Index">.Home{}</a>
+                <a href="/#">.Craving{}</a>
+                <a href="/#">.Music{}</a>
+                <a href="/#">.Game{}</a>
+                <a href="/#">.About Us{}</a>
             </nav>
 
         </header>
 
         <section class="home">
             <div class="home-content">
-                <h1>Chill out and enjoy the little things.</h1>
+            <h1>
+                &lt;Chill out & <br/> Enjoy the little things.&gt;</h1>
             </div>
         </section>
     </body>
