--- a/Chillin/wwwroot/css/site.css
+++ b/Chillin/wwwroot/css/site.css
@@ -65,10 +65,30 @@
 }
 
 .home-content h1{
+    margin: 0 auto;
+    padding: 0;
     position: relative;
-    font-size: 45px;
+    font-size: 38px;
     line-height: 1.2;
     font-family: Victor Mono;
+    word-wrap: break-word;
     color: white;
     display: flex;
+    overflow: hidden;
+    border-right: .15em solid white;
+    white-space: nowrap;
+    letter-spacing: .15em;
+    animation:
+        typing 4.5s steps(40, end),
+        cursor .4s step-end infinite alternate;
+}
+
+@keyframes cursor{
+    from, to {border-color: transparent}
+    50% {border-color: white;}
+}
+
+@keyframes typing{
+    from {width: 0}
+    to {width: 100%}
 }
