-add map in craving page

--- a/Chillin/Pages/Index.cshtml
+++ b/Chillin/Pages/Index.cshtml
@@ -24,7 +24,7 @@
 
             <nav class="navbar"> @*navigation bar*@
                 <a href="/Index">Home</a>
-                <a href="/#">Craving</a>
+                <a href="/craving">Craving</a>
                 <a href="/#">Music</a>
                 <a href="/#">Game</a>
                 <a href="/#">About Us</a>
