--- a/Chillin/Pages/Index.cshtml
+++ b/Chillin/Pages/Index.cshtml
@@ -25,7 +25,7 @@
             <nav class="navbar"> @*navigation bar*@
                 <a href="/Index">Home</a>
                 <a href="/craving">Craving</a>
-                <a href="/#">Music</a>
+                <a href="/music">Music</a>
                 <a href="/#">Game</a>
                 <a href="/#">About Us</a>
             </nav>
