--- a/Chillin/wwwroot/css/site.css
+++ b/Chillin/wwwroot/css/site.css
@@ -143,7 +143,7 @@
     }
 }
 
-.box-container {
+/*.box-container {
     position: relative;
     width: 100%;
     height: 300px;
@@ -165,4 +165,4 @@
     text-align: center;
     transform-style: preserve-3d;
     transition: transform 0.5s;
-}
+}*/
